--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,16 @@
             <div class="form-group">
               <input type="text" name="url" class="form-control" id="url-box" placeholder="Enter URL..." style="max-width: 300px;" ng-model="url" required>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            {% raw %}
+              <button type="submit" class="btn btn-primary" ng-disabled="loading">{{ submitButtonText }}</button>
+            {% endraw %}
           </form>
+          <div class="alert alert-danger" role="alert" ng-show='urlError'>
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span>
+            <span>There was an error submitting your URL.<br>
+            Please check to make sure it is valid before trying again.</span>
+          </div>
         </div>
         <div class="col-sm-5 col-sm-offset-1">
           <h2>Frequencies</h2>
@@ -44,6 +52,8 @@
               </tbody>
             </table>
           </div>
+          <img class="col-sm-3 col-sm-offset-4" src="{{ url_for('static',
+            filename='spinner.gif') }}" ng-show="loading">
         </div>
       </div>
     </div>
